# thermo_ai

./: README.md  __init__.py  cli.py  parser.py  pyproject.toml
examples/example1/: ExamSession.xml  HistoricalOverview.xml  PatientChecklist.txt
examples/example2/: ExamSession.xml  HistoricalOverview.xml  PatientChecklist.txt
examples/example3/: ExamSession.xml  HistoricalOverview.xml  PatientChecklist.txt
examples/example4/: ExamSession.xml  HistoricalOverview.xml  PatientChecklist.txt
